web/css/review-form.css
/* media query */
@media screen and (max-width: 1024px) {
  .validator {
    --validator-height: 10.5rem;
   }

  .sentence-box {
    --sentence-box-height: 10.25rem;
    --sentence-box-font-size: 1.5rem;
  }

   .validator .button-group button {
    --button-padding: 1.75rem;
  }
 }

.validator {
  --validator-height: 6.6rem;
  height: var(--validator-height);
  display: flex;
  flex-direction: row;
  align-items: center;
  padding: 0;
}

.sentence-box {
  --sentence-box-height: 6rem;
  --sentence-box-font-size: var(--base-font-size);
  height: var(--sentence-box-height);
  border: 1px solid var(--grey-color);
  flex-basis: 100%;
  line-height: 1rem;
  justify-content: center;
  align-items: center;
  display: flex;
  font-size: var(--sentence-box-font-size)
}

.validator li {
  height: calc(var(--validator-height) / 2);
  line-height: calc(var(--validator-height) / 2);
}

.button-group {
  width: 6rem;
}

.button-group.small {
  width: 2.5rem;
}

.validator .button-group button {
  --button-padding: .7rem 1.3rem;
  border: 1px solid var(--grey-color);
  font-size: 1.3em;
  margin: 0.2em;
  padding: var(--button-padding);
}

.validator .button-group button.secondary.yes {
  background-color: var(--review-selected-color);
}

.validator .button-group button.secondary.no {
  background-color: var(--review-selected-color);
}

#review-form #confirm-buttons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#review-form .loadingText {
  min-width: 100px;
}

#review-form .review-footer button {
  max-height: 50px;
}

.review-footer {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
}

.pager-container {
  text-align: center;
  min-width: 355px;
}

.pager {
  padding: 0.5rem 0.5rem;
  margin: 0 1rem;
  display: inline-block;
  text-align: center;
  cursor: pointer;
  border: 1px solid var(--main-font-color);
  border-radius: 2px;
  background-color: transparent;
  color: var(--main-font-color);
}

.pager:hover {
  background-color: gray;
}

.pager:active {
  background-color: red;
}

.pager.active {
  opacity: 0.8;
  pointer-events: none;
  text-decoration: none;
  border-color: var(--deactive-color);
  box-shadow: none;
}

